Fixed overflow

--- a/projects/cupcake/navbar.css
+++ b/projects/cupcake/navbar.css
@@ -19,7 +19,7 @@
     text-transform: uppercase;
     letter-spacing: 1.5px;
     font-weight: 200;
-    font-size: 17px;
+    font-size: 15px;
   }
   .navbar a:hover, .dropdown:hover, .dropbtn {
     opacity: 0.3;
